[package]
name = "u8pls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
chardetng = "0.1.17"
clap = { version = "4.4.12", features = ["derive"] }
encoding_rs = "0.8.33"
futures-core = "0.3.30"
regex = "1.10.2"
tokio = { version = "1.35.1", features = ["full"] }
